# Bevor-MCP

./: README.md  pyproject.toml
bevor_mcp/: main.py
src/: __init__.py  server.py
src/bevor_api/: __init__.py
src/bevor_mcp/: context.py  main.py  server.py
src/bevor_mcp/.cursor/: mcp.json
src/bevor_mcp/bevor-api/: api_bindings.py  client.py
src/bevor_mcp/bevor-api/test/: client_tests.py
src/bevor_mcp/bevor_api/: client.py
src/bevor_mcp/services/devtools/: runner.py  service.py
src/bevor_mcp/services/devtools/adapters/: foundry.py  hardhat.py  truffle.py
src/bevor_mcp/tests/: test_client.py  test_client_live.py  test_devtool_service.py  test_etl.py
src/bevor_mcp/tests/mocks/: mock_client.py
src/bevor_mcp/utils/: local_dev_tools.py  solidity_etl.py
src/rules/: rules.txt
src/services/devtools/: __init__.py  base.py
src/services/devtools/adapters/: __init__.py
src/tests/: test_client.py  test_client_live.py  test_devtool_service.py  test_etl.py
src/utils/: local_dev_tools.py
